src/test/ui/associated-types/point-at-type-on-obligation-failure-3.stderr
error[E0277]: the trait bound `bool: Bar` is not satisfied
  --> $DIR/point-at-type-on-obligation-failure-3.rs:8:5
   |
LL |     type Assoc: Bar;
   |                 --- required by this bound in `Foo::Assoc`
...
LL |     type Assoc = bool;
   |     ^^^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `bool`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
